# cpp-holons

./: CMakeLists.txt  Makefile  README.md  cert.json
cmd/echo-client-go/: main.go
cmd/echo-server-go/: main.go
examples/: echo_server.cpp
include/holons/: describe.hpp  holons.hpp  serve.hpp
protos/holonmeta/v1/: holonmeta.proto
test/: holons_test.cpp
